--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
 </head>
 <body>
     <header>
-        <h1>Paolo Gomez</h1>
+        <h1 id="name">Paolo Gomez</h1>
         <nav>
             <ul>
-                <li><a href="#Home">Home</a></li>
-                <li><a href="#Portfolio">Portfolio</a></li>
-                <li><a href="#Contact">Contact</a></li>
+                <li><a href="#profile">Home</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>        
         </nav>
     </header>
 
-    <article class="profile"> 
+    <article id="profile"> 
         <img src="images/responsive-layout-profile.png" alt="Profile image of Paolo." id="profile-image">
         <p id="profile-text">Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
     </article>
 
-    <main class="portfolio">
+    <main id="portfolio">
         <h2>Portfolio</h2>
         <section>
             <img src="images/portfolio-1.png" alt="First portfolio image">
             <h3>Marketing Page</h3>
-            <p>This project shows the front page of a marketing website meant for a specific business im interested in</p>
+            <p>This project shows the front page of a marketing website meant for a specific business im interested in.</p>
         </section>
 
         <section>
             <img src="images/portfolio-2.png" alt="Second portfolio image">
             <h3>Search Page</h3>
-            <p>This project searches through a specific database to find information that the user is trying to look up</p>
+            <p>This project searches through a specific database to find information that the user is trying to look up.</p>
         </section>
 
         <section>
@@ -64,11 +64,20 @@
         </section>
     </main>
 
-    <article>
+    <article id="contact">
         <h2>Contact</h2>
         <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
-        <p>Phone: (408) 460 - 5735</p>
-        <p>Email pmgomez248@gmail.com</p>
+        <div id="contact-info"> 
+            <p>Phone <strong>(408) 460 - 5735</strong></p>
+            <p>Email <strong>pmgomez248@gmail.com</strong><p>
+        </div>        
     </article>
+
+    <hr>
+
+    <footer>
+        <p><a href="#name">Paolo Gomez</a></p>
+        <p><a href="#name">BACK TO TOP</a></p>
+    </footer>
 </body>
 </html>
