Nav Bar Flexbox
Attempt at navbar through flexbox. Needs work.

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header class="main-header">
         <h1 id="name">Paolo Gomez</h1>
-        <nav>
-            <ul>
+    
+            <ul class="nav">
                 <li><a href="#profile">Home</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>        
-        </nav>
+       
     </header>
 
     <article id="profile"> 
@@ -27,44 +27,46 @@
 
     <main id="portfolio">
         <h2>Portfolio</h2>
-        <div id="portfolio-container-1">
-            <section id="image-1">
-                <img src="images/portfolio-1.png" alt="First portfolio image">
-                <h3>Marketing Page</h3>
-                <p>This project shows the front page of a marketing website meant for a specific business im interested in.</p>
-            </section>
+        <div id="container-section">
+            <div id="portfolio-container-1">
+                <section id="image-1">
+                    <img src="images/portfolio-1.png" alt="First portfolio image">
+                    <h3>Marketing Page</h3>
+                    <p>This project shows the front page of a marketing website meant for a specific business im interested in.</p>
+                </section>
 
-            <section id="image-2">
-                <img src="images/portfolio-2.png" alt="Second portfolio image">
-                <h3>Search Page</h3>
-                <p>This project searches through a specific database to find information that the user is trying to look up.</p>
-            </section>
-        </div>
-        <div id="portfolio-container-2">
-            <section id="image-3">
-                <img src="images/portfolio-3.png" alt="Third portfolio image">
-                <h3>Travel App</h3>
-            <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-            </section>
+                <section id="image-2">
+                    <img src="images/portfolio-2.png" alt="Second portfolio image">
+                    <h3>Search Page</h3>
+                    <p>This project searches through a specific database to find information that the user is trying to look up.</p>
+                </section>
+            </div>
+            <div id="portfolio-container-2">
+                <section id="image-3">
+                    <img src="images/portfolio-3.png" alt="Third portfolio image">
+                    <h3>Travel App</h3>
+                <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+                </section>
 
-            <section id="image-4">
-                <img src="images/portfolio-4.png" alt="Fourth portfolio image">
-                <h3>Map of Favorite Spots</h3>
-                <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
-            </section>
-        </div>
-        <div id="portfolio-container-3">
-            <section id="image-5">
-                <img src="images/portfolio-5.png" alt="Fifth portfolio image">
-                <h3>Photo Gallery</h3>
-            <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-            </section>
+                <section id="image-4">
+                    <img src="images/portfolio-4.png" alt="Fourth portfolio image">
+                    <h3>Map of Favorite Spots</h3>
+                    <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+                </section>
+            </div>
+            <div id="portfolio-container-3">
+                <section id="image-5">
+                    <img src="images/portfolio-5.png" alt="Fifth portfolio image">
+                    <h3>Photo Gallery</h3>
+                <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+                </section>
 
-            <section id="image-6">
-                <img src="images/portfolio-6.png" alt="Sixth portfolio image">
-                <h3>Calculator</h3>
-            <p>Someone can enter in the numers they want, and press the big blue button and get the result.</p>
-            </section>
+                <section id="image-6">
+                    <img src="images/portfolio-6.png" alt="Sixth portfolio image">
+                    <h3>Calculator</h3>
+                <p>Someone can enter in the numers they want, and press the big blue button and get the result.</p>
+                </section>
+            </div>
         </div>
     </main>
 
