Second Submission Edits
Edits prior to second submission

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="main-header">
             <h1 id="name-1">Paolo Gomez</h1>
                 <ul class="nav">
-                    <li><a href="#profile">Home</a></li>
+                    <li><a href="#top">Home</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -25,7 +25,7 @@
         <div class="laptop-header">
             <h1 id="laptop-name">Paolo Gomez</h1>
                 <ul class="laptop-nav">
-                    <li><a href="#profile">Home</a></li>
+                    <li><a href="#top">Home</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -96,14 +96,14 @@
 
     <footer>
         <div class="footer-1">
-            <p><a href="#name" id="paolo">Paolo Gomez</a></p>
-            <p><a href="#name" id="back-to-top">BACK TO TOP</a></p>
+            <p><b>Paolo Gomez</b></p>
+            <p><a href="#top" id="back-to-top">BACK TO TOP</a></p>
         </div>
 
         <div class="footer-2">
-            <p><a href="#name" id="paolo">Paolo Gomez</a></p>
+            <p><b>Paolo Gomez</b></p>
             <ul class="nav">
-                <li><a href="#profile">Home</a></li>
+                <li><a href="#top">Home</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>    
